# autoresearch

./: $null  .env.example  .gitignore  README.md  architecture.md  autoresearch_trading_prompt_v2.md  config.py
autoresearch-trading/: .env.example  __init__.py  agent.py  backtest.py  data.py  execute.py  monitor.py  prepare.py  program.md  pyproject.toml  risk.py  strategy.py  utils.py
